--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ nav{
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 2vw 8vw;
+    padding: 1.5vw 8vw;
     justify-content: space-between;
+    text-transform: uppercase;
 }
 
 #navlinks{
@@ -35,19 +36,46 @@ nav{
 }
 
 nav:hover #expand{
-    height: 100%;
-    bottom: -100%;
+    height: 150%;
+    bottom: -150%;
+    background-color: #111;
 }
 
 #expand{
     position: absolute;
-    /* height: 100%; */
+    height: 0%;
     width: 84%;
     bottom: 0;
     border-bottom: 1.5px solid #dadada;
     transition: all ease 0.5s;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    /* gap: 2vw; */
+    padding-top: 1vw;
+    padding-bottom: 3vw;
+    padding-left: 17vw;
+    padding-right: 16vw;
 }
 
+
+nav button{
+    background-color: #0DA34E;
+    display: flex;
+    align-items: center;
+    padding: 15px 18px;
+    font-size: 1vw;
+    font-weight: 900;
+    border-radius: 50px;
+    border: none;
+    text-transform: uppercase;
+    z-index: 9;
+}
+
+nav button svg{
+    height: 1vw;
+    margin-left: 1.4vw;
+}
 
 #page1{
     height: 100vh;
@@ -64,6 +92,11 @@ nav:hover #expand{
     text-transform: uppercase;
     font-weight: 900;
     line-height: 9vw;
+}
+
+#page1 h1:nth-child(1)
+{
+    margin-top: 15vh;
 }
 
 #page1 h1 svg{
