--- a/style.css
+++ b/style.css
@@ -363,3 +363,127 @@ nav button svg{
 }
 
 
+#page4{
+    height: 100vh;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 7.5vw 6vw;
+}
+
+#p4left{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    color: black;
+}
+
+#p4left h1{
+    width: 55%;
+    font-size: 3vw;
+    font-weight: 900;
+    color: black;
+}
+
+#p4right{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    /* padding: 0 7vw; */
+    color: black;
+}
+
+#p4right h4{
+    font-size: 1.1vw;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 0.437);
+    text-transform: uppercase;
+    margin-bottom: 1.6vw;
+}
+
+#p4right p{
+    font-size: 1.4vw;
+    font-weight: 900;
+    color: black;
+    letter-spacing: 0.9px;
+    line-height: 1.9vw;
+}
+
+#p4right p:first-of-type {
+    padding-bottom: 4.5vw;
+}
+
+#page5{
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 1vw;
+    padding: 3vw 6vw;
+}
+
+.box{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(232, 232, 232, 0.741);
+    padding: 2vw 2vw;
+}
+
+.box span{
+    font-size: 4.1vw;
+    font-weight: 900;
+    color: black;
+}
+
+.box h3{
+    color: black;
+    font-size: 1vw;
+    padding-top: 2vw;
+}
+
+.box h5{
+    padding-top: 7.5vw;
+    color: rgba(0, 0, 0, 0.542);
+}
+
+#page6{
+    height: 60vh;
+    width: 100%;
+    background-color: red;
+    display: flex;
+    padding: 4.5vw 6vw;
+}
+
+#p6left{
+    height: 100%;
+    width: 27%;
+}
+
+#p6right{
+    height: 100%;
+    width: 73%;
+    display: flex;
+    padding-left: 1vw;
+}
+
+#p6right span{
+    font-size: 1vw;
+    font-weight: 900;
+    color: black;
+    background-color: green;
+    height: fit-content;
+    padding-right: 8vw;
+    padding-bottom: 4vw;
+}
+
+#p6right p{
+    font-size: 2.5vw;
+    font-weight: 900;
+    color: black;
+}
