--- a/style.css
+++ b/style.css
@@ -452,38 +452,193 @@ nav button svg{
     color: rgba(0, 0, 0, 0.542);
 }
 
-#page6{
-    height: 60vh;
+
+#page-test{
+    height: 50vh;
     width: 100%;
-    background-color: red;
+    background-color: white;
     display: flex;
     padding: 4.5vw 6vw;
 }
 
-#p6left{
+#testleft{
     height: 100%;
     width: 27%;
 }
 
-#p6right{
+#testright{
     height: 100%;
     width: 73%;
     display: flex;
     padding-left: 1vw;
 }
 
-#p6right span{
-    font-size: 1vw;
-    font-weight: 900;
-    color: black;
-    background-color: green;
-    height: fit-content;
-    padding-right: 8vw;
-    padding-bottom: 4vw;
+#testright span{
+    font-size: 0.8vw;
+    display: inline-block;
+   color: black;
+   width: 15vw;
+   line-height: 15px;
 }
 
-#p6right p{
+#testright p{
     font-size: 2.5vw;
     font-weight: 900;
     color: black;
 }
+
+
+#page6{
+    min-height: 100vh;
+    width: 100%;
+    background-color: white;
+    position: relative;
+    /* padding: 13vh 6vw; */
+    padding-bottom: 13vh;
+}
+
+.section{
+    height: 85vh;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 13vh 6vw;
+    padding-bottom: 0;
+}
+
+.s1left{
+    padding-top: 3vh;
+    height: 100%;
+    width: 25%;
+    border-top: 2px solid #00000052;
+}
+
+.s1left h2{
+    font-size: 2.3vw;
+    color: black;
+    font-weight: 900;
+}
+
+.s1left p{
+    color: #000000d4;
+    margin-top: 12vh;
+    font-size: 1.1vw;
+    font-weight: 700;
+}
+
+.s2right{
+    height: 100%;
+    width: 70%;
+    position: relative;
+}
+
+.s2right img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.s2right video{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity ease 0.1s;
+}
+
+#page7{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #111;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+#p7up{
+    height: 60vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#p7up::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 7vw;  
+    right: 7vw; 
+    border-bottom: 1px solid #fafafa33;
+    height: 0;
+}
+
+#p7up p{
+    font-size: 4.5vw;
+    font-weight: 900;
+}
+
+#p7down{
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    position: relative;
+    padding: 3vw 7vw;
+}
+
+#p7down>button{
+    background-color: #0BA34E;
+    padding: 1.5vw 3vw;
+    font-size: 1vw;
+    border-radius: 50px;
+    border: none;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+#p7-d-right{
+    width: 70%;
+}
+
+#p7-d-right>p{
+    font-size: 2.4vw;
+}
+
+#p7-d-right>p span{
+    width: 15vw;
+    display: inline-block;
+    font-size: 1vw;
+}
+
+#p7right-list{
+    width: 100%;
+    margin-top: 6vh;
+    padding: 5vh 0;
+    border-top: 2px solid white;
+}
+
+#p7right-list>h1{
+    font-size: 3vw;
+    font-weight: 900;
+}
+
+#p7right-list #flex{
+    display: flex;
+    margin-top: 4vh;
+}
+
+#p7right-list #flex h4{
+    border-radius: 50px;
+    border: 1px solid white;
+    padding: 5px 15px;
+    font-weight: 0.5vw;
+    font-weight: 500;
+}
+
