--- a/style.css
+++ b/style.css
@@ -593,7 +593,7 @@ nav button svg{
     padding: 3vw 7vw;
 }
 
-#p7down>button{
+#p7down button{
     background-color: #0BA34E;
     padding: 1.5vw 3vw;
     font-size: 1vw;
@@ -601,6 +601,8 @@ nav button svg{
     border: none;
     font-weight: 700;
     text-transform: uppercase;
+    position: sticky;
+    top: 20%;
 }
 
 #p7-d-right{
@@ -621,10 +623,9 @@ nav button svg{
     width: 100%;
     margin-top: 6vh;
     padding: 5vh 0;
-    border-top: 2px solid white;
 }
 
-#p7right-list>h1{
+#p7right-list h1{
     font-size: 3vw;
     font-weight: 900;
 }
@@ -632,13 +633,287 @@ nav button svg{
 #p7right-list #flex{
     display: flex;
     margin-top: 4vh;
+    margin-bottom: 4vh;
+    text-transform: capitalize;
 }
 
 #p7right-list #flex h4{
     border-radius: 50px;
-    border: 1px solid white;
+    border: 1px solid rgba(255, 255, 255, 0.438);
     padding: 5px 15px;
-    font-weight: 0.5vw;
+    font-size: 1vw;
     font-weight: 500;
 }
 
+.p7elem{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-top: 3vh;
+    padding-bottom: 9vh;
+    position: relative;
+    overflow: hidden;
+    border-top: 1px solid #333;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
+
+.p7elem p{
+    width: 55%;
+    font-size: 0.9vw;
+    position: relative;
+    z-index: 8;
+}
+
+.p7elem h3{
+    width: 20%;
+    font-size: 1.5vw;
+    font-weight: 700;
+    position: relative;
+    z-index: 8;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
+
+.p7elem i{
+    font-size: 1vw;
+    position: relative;
+    z-index: 8;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
+
+.p7overlay{
+    width: 100%;
+    height: 100%;
+    background-color: #222;
+    position: absolute;
+    top: 0;
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+}
+
+.p7elem:hover h3{
+    padding-left: 1vw;
+}
+
+.p7elem:hover i{
+    padding-right: 1vw;
+}
+
+.p7elem:hover .p7overlay{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.p7elem:hover{
+    border-top: 1px solid white;
+}
+
+summary::marker{
+    content: "";
+}
+
+#uiux{
+    border-top: 1px solid #333;
+    padding: 3.5vh 0;
+}
+
+#product{
+    border-top: 1px solid #333;
+    padding: 3vh 0;
+}
+
+#page8{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #111;
+    padding: 6vw 6vw;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#page8::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 7vw;  
+    right: 7vw; 
+    border-top: 1px solid #333;
+    height: 0;
+}
+
+#p8up{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#p8up h2{
+    font-size: 1vw;
+    text-align: center;
+}
+
+#p8up p{
+    width: 75%;
+    text-align: center;
+    font-size: 2.3vw;
+    font-weight: 700;
+    margin-top: 3vw;
+}
+
+#p8cards{
+    /* width: 100%;
+    height: auto; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 15px;
+    margin-top: 7vw;
+}
+
+.cards{
+    height: 35vh;
+    background-color: #222;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1.5vw;
+}
+
+.cardup{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.carddown p{
+    font-size: 0.9vw;
+    width: 97%;
+}
+
+#page9{
+    min-height: 100vh;
+    width: 100%;
+    background-color: white;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+#p9up{
+    height: 50vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#p9up::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 7vw;  
+    right: 7vw; 
+    border-bottom: 1px solid #00000033;
+    height: 0;
+}
+
+#p9up h1{
+    color: black;
+    font-size: 5vw;
+    font-weight: 900;
+}
+
+#p9down{
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    position: relative;
+    padding: 5vw 7vw;
+}
+
+#p9-up-left{
+    background-color: #4F5BFF;
+    width: 15vw;
+    height: 3.5vw;
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#p9down a{
+    position: absolute;
+    text-decoration: none;
+    font-size: 0.8vw;
+    font-weight: 700;
+    text-transform: uppercase;  
+}
+
+#p9down i{
+    font-size: 1vw;
+    font-weight: 100;
+    margin-left: 0.5vw;
+}
+
+#p9-d-right{
+    width: 55%;
+    margin-right: 11.3vw;
+    display: flex;
+    flex-direction: column;
+    gap: 5vw;
+}
+
+#p9-d-right p{
+    color: black;
+    font-size: 1.9vw;
+}
+
+#page10{
+    width: 100%;
+    min-height: 100vh;
+    background-color: #111;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Responsiveness? Too lazy to do now :) */
+@media screen and (max-width: 1350px){
+    body::before{
+        content: "Mobile view is NOT Available Yet! Please open in Laptop or Desktop to view this awesome website!";
+        display: block;
+        font-size: 5.5vw;
+        width: 40%;
+        text-align: center;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%);
+        color: black;
+    }
+    #main, nav{
+        display: none;
+    }
+}
