--- a/style.css
+++ b/style.css
@@ -102,6 +102,10 @@ nav button{
     z-index: 9;
 }
 
+nav button:hover{
+    cursor: pointer;
+}
+
 nav button svg{
     height: 1vw;
     margin-left: 1.4vw;
@@ -115,6 +119,7 @@ nav button svg{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 #page1 h1{
@@ -533,6 +538,10 @@ nav button svg{
     position: relative;
 }
 
+.s2right:hover{
+    cursor: pointer;
+}
+
 .s2right img{
     height: 100%;
     width: 100%;
@@ -603,6 +612,10 @@ nav button svg{
     text-transform: uppercase;
     position: sticky;
     top: 20%;
+}
+
+#p7down button:hover{
+    cursor: pointer;
 }
 
 #p7-d-right{
@@ -803,6 +816,8 @@ summary::marker{
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
+    padding: 0 7vw;
+    padding-bottom: 5vw;
 }
 
 #p9up{
@@ -818,8 +833,8 @@ summary::marker{
     content: "";
     position: absolute;
     bottom: 0;
-    left: 7vw;  
-    right: 7vw; 
+    left: 0vw;  
+    right: 0vw; 
     border-bottom: 1px solid #00000033;
     height: 0;
 }
@@ -835,7 +850,7 @@ summary::marker{
     justify-content: space-between;
     align-items: start;
     position: relative;
-    padding: 5vw 7vw;
+    padding: 5vw 0;
 }
 
 #p9-up-left{
@@ -846,6 +861,10 @@ summary::marker{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#p9-up-left:hover{
+    cursor: pointer;
 }
 
 #p9down a{
@@ -875,27 +894,236 @@ summary::marker{
     font-size: 1.9vw;
 }
 
-#page10{
+#p9-d-bottom{
+    height: 45vh;
     width: 100%;
-    min-height: 100vh;
+    border-top: 1px solid #dadada;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#p9db-part1{
+    border-right: 1px solid #dadada;
+    width: 34%;
+    height: 100%;
+}
+
+#p9db-part2{
+    border-right: 1px solid #dadada;
+    width: 28%;
+    height: 100%;
+}
+
+#p9db-part3{
+    border-right: 1px solid #dadada;
+    width: 15%;
+    height: 100%;
+}
+
+#p9db-part4{
+    border-right: 1px solid #dadada;
+    width: 18%;
+    height: 100%;
+}
+
+#p9db-part5{
+    width: 15%;
+    height: 100%;
+}
+
+.scrollAnim{
+    padding: 3vh 0;
+}
+
+.scrollAnim h5{
+    color: black;
+    font-weight: 500;
+    font-size: 0.95vw;
+    margin-bottom: 4vh;
+}
+
+.scrollAnim h4{
     background-color: #111;
+    color: white;
+    border-radius: 50px;
+    padding: 5px 10px;
+    width: 76%;
+    font-weight: 500;
+    font-size: 0.85vw;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.3vw;
+}
+
+.scrollAnim h4 span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 1.6vw;
+    width: 1.6vw;
+    background-color: #333;
+    border-radius: 50%;
+    padding: 0.5vw;
+    margin-right: 1vw;
+}
+
+#p9db-part2 h4:nth-child(2){
+    transform: translateX(0);
+}
+
+#p9db-part2 h4:nth-child(3){
+    transform: translateX(10%);
+}
+
+#p9db-part2 h4:nth-child(4){
+    transform: translateX(20%);
+}
+
+#p9db-part2 h4:nth-child(5){
+    transform: translateX(30%);
+}
+
+#p9db-part2 h4:nth-child(6){
+    transform: translateX(40%);
+}
+
+#p9db-part2 h4:nth-child(7){
+    transform: translateX(50%);
+}
+
+#p9db-part3 h4:nth-child(2){
+    transform: translateX(0);
+}
+
+#p9db-part3 h4:nth-child(3){
+    transform: translateX(10%);
+}
+
+#p9db-part4 h4:nth-child(2){
+    transform: translateX(0);
+}
+
+#p9db-part4 h4:nth-child(3){
+    transform: translateX(10%);
+}
+
+#p9db-part4 h4:nth-child(4){
+    transform: translateX(20%);
+}
+
+details:hover{
+    cursor: pointer;
 }
 
 
+#page10{
+    width: 100%;
+    height: 60vh;
+    background-color: #111;
+    display: flex;
+    padding: 3vw 7vw;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
 
+#p10left h1{
+    font-size: 4.5vw;
+    text-transform: capitalize;
+    line-height: 4.5vw;
+}
 
+#p10right{
+    width: 30%;
+}
 
+#p10right span{
+    transition: all ease 0.3s;
+}
 
+#p10right #sub{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #333;
+    padding: 1.5vw 0;
+    margin-bottom: 1.5vw;
+    transition: all ease 0.3s;
+}
 
+#p10right #sub:hover{
+    border-bottom: 1px solid #dadada;
+    cursor: pointer;
+}
 
+#p10right #sub h3{
+    font-size: 1.5vw;
+}
 
+#p10right #sub i{
+    background-color: #333;
+    padding: 0.5vw;
+    border-radius: 50%;
+}
 
+#email{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 2vw;
+}
 
+#email h3{
+    font-size: 1vw;
+    font-weight: 500;
+    color: rgba(220, 220, 220, 0.686);
+}
 
+#email span{
+    font-size: 0.9vw;
+    background-color: black;
+    border: 1px solid white;
+    padding: 0.5vw 0.7vw;
+    width: fit-content;
+    border-radius: 50px;
+    text-transform: uppercase;
+}
 
+#socials{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 2vw;
+}
 
+#socials h3{
+    font-size: 1vw;
+    font-weight: 500;
+    color: rgba(220, 220, 220, 0.686);
+}
 
+#socials #links{
+    width: 85%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
 
+#socials #links span{
+    font-size: 0.9vw;
+    background-color: black;
+    border: 1px solid white;
+    padding: 0.5vw 0.9vw;
+    width: fit-content;
+    border-radius: 50px;
+    text-transform: uppercase;
+}
+
+#p10right span:hover{
+    cursor: pointer;
+    font-weight: 700;
+}
 
 
 
